updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am a software developer student.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Ahmedabad, India.</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Driving, DIY creativities, geating up to date with latest technology.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>To have my own software solutions company.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Waterloo, Ontario.</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>It helps me to become more creative and think outside the box and also helps to over the frustration and remain patient.</p>
     </section>
 
     <footer id="footer">
