updating our details 2

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <h1>Where do you live?</h1>
       <p>Waterloo, Ontario.</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>It helps me to become more creative and think outside the box and also helps to over the frustration and remain patient.</p>
+      <p>It helps me to become more creative and think outside the box and also helps to overcome the frustration and remain patient.</p>
     </section>
 
     <footer id="footer">
