--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>I am a software developer student.</p>
+      <p>I am a student of Coding Bootcamp at niversity of Toronto.</p>
       <h1>Where I'm From</h1>
       <p>Ahmedabad, India.</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Driving, DIY creativities, geating up to date with latest technology.</p>
+      <p>Driving, DIY creativities, geting up to date with latest technology.</p>
       <h1>What's your dream job?</h1>
-      <p>To have my own software solutions company.</p>
+      <p>To become a full stack web developer.</p>
       <h1>Where do you live?</h1>
       <p>Waterloo, Ontario.</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>It helps me to become more creative and think outside the box and also helps to overcome the frustration and remain patient.</p>
+      <p>It helps me to become more creative and think outside the box and also helps me to overcome the frustration and remain patient. It also helps me to keep updated with the latest trends and innovations in the Tech industry.</p>
     </section>
 
     <footer id="footer">
