--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <h1>Where I'm From</h1>
       <p>Ahmedabad, India.</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Driving, DIY creativities, geting up to date with latest technology.</p>
+      <p>Driving, DIY creativities, getting up to date with latest technology.</p>
       <h1>What's your dream job?</h1>
       <p>To become a full stack web developer.</p>
       <h1>Where do you live?</h1>
