--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>I am a student of Coding Bootcamp at niversity of Toronto.</p>
+      <p>I am a student of Coding Bootcamp at university of Toronto.</p>
       <h1>Where I'm From</h1>
       <p>Ahmedabad, India.</p>
       <h1>What are your favorite hobbies?</h1>
